fix: all left-align.No need extra css

--- a/packages/neuron-ui/src/components/MultisigAddress/multisigAddress.module.scss
+++ b/packages/neuron-ui/src/components/MultisigAddress/multisigAddress.module.scss
@@ -50,10 +50,6 @@
       min-width: 40px;
       text-align: left;
     }
-
-    .checkBoxTh {
-      text-align: left;
-    }
   }
 
   tr {
